[package]
name = "infi75-custom"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
eros = { version = "0.5.0", features = [] }
hidapi = "2.6.3"
itermore = { version = "0.8.0", features = ["next_chunk"] }
log = "0.4.29"
retry = { version = "2.1.0", default-features = false }
rusb = "0.9.4"
